--- a/estilo.css
+++ b/estilo.css
@@ -349,57 +349,57 @@ html{
     margin-bottom: 10px;
 }
 
-/* PORTFOLIO */
-.portfolio{
+/* EXPERIENCIA */
+.experiencia{
     background-color: rgba(30,35,38,.7);
     color: #fff;
     padding: 50px 20px;
 }
 
-.portfolio .contenedor-portfolio{
+.experiencia .contenedor-experiencia{
     max-width: 1100px;
     margin: auto;
-    display: flex;
-    flex-wrap: wrap;
+
 }
 
-.portfolio h2{
+.experiencia h2{
     font-size: 48px;
     font-family: 'IBM Plex Mono';
     text-align: center;
     padding: 20px 0;
 }
 
-.portfolio .card{
-    width: 300px;
-    height: 220px;
-    background-color:#252A2E;
-    border-radius: 9px;
-    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
-    overflow: hidden;
-    margin: 20px;
-    text-align: center;
-    transition: 0.3s;
+.experiencia .experiencia-linea{
+    margin: 50px 50px;
 }
 
-.portfolio .card:hover{
-    transform: translateY(-10px);
-    box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
+.experiencia .experiencia-linea .experiencia-circulo{
+    height: 10px;
+    width: 10px;
+    left: -26px;
+    top: 14px;
+    background-color: #1cb698;
+    border-radius: 70%;
+    position: relative;
+
 }
 
-.portfolio img{
-    width: 290px;
-    height: 170px;
+.experiencia ol{
+    border-inline-start: 3px solid #1cb698;
+    list-style-type: none;
 }
 
-.portfolio .card a{
-    text-decoration: none;
-    color:#fff;
-    transition: 0.3s;
+.experiencia li{
+    padding-left: 20px;
+    padding-bottom: 40px;
 }
 
-.portfolio .card a:hover{
-    color:#1cb698;
+.experiencia time{
+    color: #a4a4a4;
+}
+
+.experiencia strong{
+    color: #1cb698;
 }
 
 /* CONTACTO */
